Provider/State moved to config-level module
There are now three levels of things: configurations, services, and modules.

There are a bunch of modules. These are useful building blocks.
There is one set of services. These represent the units that can be created/changed/destroyed.
There is one configuration per fork of a repo. These introduce concrete settings, and is what terraform interacts directly against.

When forking the repo, the forker will need to duplicate the configuration folder and modify the *.hcl / *.tfvars files appropriately.

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 *.tfstate
 *.tfstate.*
 
-# Ignore any local Terraform pre-defined variable files
+# Ignore any local per-user Terraform pre-defined variable files
 
-*.tfvars
+user.auto.tfvars
 
 # Ignore any local crash logs
 
