--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ on:
 env:
   TF_IN_AUTOMATION: 1
   TF_INPUT: 0
-  GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
+  GOOGLE_APPLICATION_CREDENTIALS: application-default-credentials.json
 
 jobs:
   deploy:
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: hashicorp/setup-terraform@v1
+
+      - name: "Prepare Google application credentials"
+        run: echo ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }} >> $GOOGLE_APPLICATION_CREDENTIALS
 
       - name: "Deploy project"
         run: cd configurations/${{ github.repository }}/project && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
