--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,6 +6,7 @@ on:
 env:
   TF_IN_AUTOMATION: 1
   TF_INPUT: 0
+  GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
 
 jobs:
   deploy:
@@ -14,11 +15,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: hashicorp/setup-terraform@v1
-
-      - name: "Prepare Google application credentials"
-        run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}" >> ${{ github.workspace }}/application-default-credentials.json
-          echo "::set-env name=GOOGLE_APPLICATION_CREDENTIALS::${{ github.workspace }}/application-default-credentials.json"
 
       - name: "Deploy project"
         run: cd configurations/${{ github.repository }}/project && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
