--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,6 +6,7 @@ on:
 env:
   TF_IN_AUTOMATION: 1
   TF_INPUT: 0
+  TF_CLI_ARGS_apply: "-auto-approve"
   GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
 
 jobs:
@@ -15,11 +16,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: hashicorp/setup-terraform@v1
-
-      - name: debug logging
-        run: |
-          echo $TF_INPUT
-          echo $TF_IN_AUTOMATION
 
       - name: "Deploy project"
         run: cd configurations/${{ github.repository }}/project && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
