--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/UE4-GHA-BuildAgent"]
 	path = submodules/UE4-GHA-BuildAgent
 	url = https://github.com/Kalmalyzer/UE4-GHA-BuildAgent
+[submodule "submodules/UE4-GHA-BuildAgentWatchdog"]
+	path = submodules/UE4-GHA-BuildAgentWatchdog
+	url = https://github.com/Kalmalyzer/UE4-GHA-BuildAgentWatchdog
