Watchdog is deployed, but gives 400 error when listing instances
The watchdog's service account probably lacks rights to list GCE instances at the moment.

Create a new, particular service account -- or grant the cloud function's default account rights to list GCE instances?

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ crash.log
 # Ignore any Google Cloud credentials file
 
 application-default-credentials.json
+
+# Ignore zipped archives with source code (these are created during deployment of Google Cloud Functions)
+
+*_cloud_function_source.zip
