GHA script split into more fine-grained jobs
Storage / builders / watchdog has been split into engine- and game- related versions.
This will give better error messages when building (one job failing = one terraform apply failing).
It will also shorten deployment times, particularly for watchdogs that typically take 2m30s for each function that needs to be redeployed. The fine-grained jobs allow deployment to run in parallel.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,7 @@ jobs:
 
   deploy_project:
     needs: [ avoid_concurrent_invocations ]
+    name: "Deploy project"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -35,8 +36,9 @@ jobs:
       - name: "Deploy project"
         run: cd configurations/${{ github.repository }}/project && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
 
-  deploy_storage:
+  deploy_engine_storage:
     needs: [ deploy_project ]
+    name: "Deploy engine storage"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -50,11 +52,25 @@ jobs:
       - name: "Deploy engine storage"
         run: cd configurations/${{ github.repository }}/engine-storage && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
 
+  deploy_game_storage:
+    needs: [ deploy_project ]
+    name: "Deploy game storage"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+
+      - uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION }}
+
       - name: "Deploy game storage"
         run: cd configurations/${{ github.repository }}/game-storage && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
 
   build_buildagent_image:
     needs: [ deploy_project ]
+    name: "Build BuildAgent VM image"
     runs-on: ubuntu-latest
     outputs:
       image: ${{ steps.build_image.outputs.image_name }}
@@ -83,8 +99,9 @@ jobs:
           
           echo  "::set-output name=image_name::${IMAGE_NAME}"
 
-  deploy_builders:
-    needs: [ deploy_storage, build_buildagent_image ]
+  deploy_engine_builders:
+    needs: [ deploy_engine_storage, build_buildagent_image ]
+    name: "Deploy engine builders"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -101,14 +118,28 @@ jobs:
           export TF_VAR_image=${{ needs.build_buildagent_image.outputs.image }}
           cd configurations/${{ github.repository }}/engine-builders && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
 
+  deploy_game_builders:
+    needs: [ deploy_game_storage, build_buildagent_image ]
+    name: "Deploy game builders"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+
+      - uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION }}
+
       - name: "Deploy game builders"
         run: |
           export TF_VAR_github_pat=${{ secrets.GAME_GITHUB_PAT }}
           export TF_VAR_image=${{ needs.build_buildagent_image.outputs.image }}
           cd configurations/${{ github.repository }}/game-builders && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
 
-  deploy_watchdogs:
+  deploy_engine_watchdog:
     needs: [ deploy_project ]
+    name: "Deploy engine watchdog"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -123,6 +154,19 @@ jobs:
         run: |
           export TF_VAR_github_pat=${{ secrets.ENGINE_GITHUB_PAT }}
           cd configurations/${{ github.repository }}/engine-watchdog && terraform init -backend-config=../backend.hcl && terraform plan && terraform apply
+
+  deploy_game_watchdog:
+    needs: [ deploy_project ]
+    name: "Deploy game watchdog"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+
+      - uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION }}
 
       - name: "Deploy game watchdog"
         run: |
