Fixed image_name output variable name from build-agent step

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,7 +41,7 @@ jobs:
     name: "Build BuildAgent VM image"
     runs-on: ubuntu-latest
     outputs:
-      image: ${{ steps.build_image.outputs.image_name }}
+      image_name: ${{ steps.build_image.outputs.image_name }}
     steps:
       - uses: actions/checkout@v2
         with:
