Added manual trigger for the create/update workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,10 @@
+name: Create/update infrastructure
+
 on:
+  # Allow users to trigger workflow manually via GitHub UI
+  workflow_dispatch:
+
+  # Run on all pushes
   push:
     branches:
       - '**'
