--- a/.github/workflows/destroy-services.yaml
+++ b/.github/workflows/destroy-services.yaml
@@ -34,4 +34,7 @@ jobs:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
 
       - name: "Destroy services"
+        export TF_VAR_github_pat=${{ secrets.ENGINE_AND_GAME_GITHUB_PAT }}
+        export TF_VAR_engine_builder_image=${{ needs.build_buildagent_image.outputs.image_name }}
+        export TF_VAR_game_builder_image=${{ needs.build_buildagent_image.outputs.image_name }}
         run: cd configurations/${{ github.repository }}/services && terraform init -backend-config=../backend.hcl && terraform destroy
