Image names are unnecessary for destroy

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -35,8 +35,8 @@ jobs:
 
       - name: "Destroy services"
         export TF_VAR_github_pat=${{ secrets.ENGINE_AND_GAME_GITHUB_PAT }}
-        export TF_VAR_engine_builder_image=${{ needs.build_buildagent_image.outputs.image_name }}
-        export TF_VAR_game_builder_image=${{ needs.build_buildagent_image.outputs.image_name }}
+        export TF_VAR_engine_builder_image="none"
+        export TF_VAR_game_builder_image="none"
         run: cd configurations/${{ github.repository }}/services && terraform init -backend-config=../backend.hcl && terraform destroy
 
   destroy_project:
