Lots of improvements to VM image building
Centralized tool versions

More tests for image build

Errors during PowerShell script invocation fails Packer job

Install Windows Updates when building image

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,7 +63,7 @@ jobs:
         id: build_image
         run: |
 
-          TEMPLATE_FILE=${{ github.workspace }}/submodules/UE4-GHA-BuildAgent/UE4-GCE-Win64-Git-GitHubActions-MSVC.json
+          TEMPLATE_FILE=${{ github.workspace }}/submodules/UE4-GHA-BuildAgent/UE4-GCE-Win64-Git-GitHubActions-MSVC.pkr.hcl
           VARIABLE_FILE=${{ github.workspace }}/configurations/${{ github.repository }}/build-agent-image/vars.json
 
           TEMPLATE_FOLDER=`dirname "${TEMPLATE_FILE}"`
